--- a/CalOrdersJET/src/index.html
+++ b/CalOrdersJET/src/index.html
@@ -67,6 +67,9 @@
 
         <!-- This contains icon fonts used by the starter template -->
         <link rel="stylesheet" href="css/demo-alta-site-min.css" type="text/css"/>
+        
+        <!-- This contains icon fonts used by the starter template -->
+        <link rel="stylesheet" href="css/demo-icon-charts.css" type="text/css"/>
 
         <!-- This is where you would add any app specific styling -->
         <link rel="stylesheet" href="css/override.css" type="text/css"/>
