--- a/CalOrdersSwaggerUI/web/index.html
+++ b/CalOrdersSwaggerUI/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge">
-  <title>Tempus Swagger UI</title>
+  <title>CalOrders Swagger UI</title>
   <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
   <link href='css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
@@ -38,7 +38,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://localhost:8080/TempusAPIDocs/swagger.yml";
+        url = "http://localhost:8080/CalOrdersSwaggerUI/swagger.yml";
       }
 
       hljs.configure({
