updated version number in footer

--- a/CalOrdersJET/src/index.html
+++ b/CalOrdersJET/src/index.html
@@ -169,7 +169,7 @@
                     </ul>
                 </div>
                 <div class="oj-web-applayout-footer-item oj-web-applayout-max-width oj-text-secondary-color oj-text-sm">
-                    CalOrders version: 0.1 Alpha, Copyright © 2017 OnCore Consulting LLC, All rights reserved.
+                    CalOrders version: 1.0, Copyright © 2017 OnCore Consulting LLC, All rights reserved.
                 </div>
             </footer>
         </div>
