set url for swaggerui on calorderstest [#140737309]

--- a/CalOrdersSwaggerUI/web/index.html
+++ b/CalOrdersSwaggerUI/web/index.html
@@ -38,7 +38,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://localhost:8080/CalOrdersSwaggerUI/swagger.yml";
+        url = "http://calorderstest.oncorellc.com:9081/swagger.yml";
       }
 
       hljs.configure({
