--- a/CalOrdersJET/src/index.html
+++ b/CalOrdersJET/src/index.html
@@ -57,8 +57,8 @@
 
         <meta charset="UTF-8">
 
-        <link rel="shortcut icon" href="images/header_ca.gov.ico" />
-        <link rel="apple-touch-icon" href="images/header_ca.gov.png" />
+        <link rel="shortcut icon" href="css/images/header_ca.gov.ico" />
+        <link rel="apple-touch-icon" href="css/images/header_ca.gov.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="css/images/favicon.ico" type="image/x-icon" />
 
