[#140806551] Order History does not sort by price correctly

--- a/CalOrdersJET/src/index.html
+++ b/CalOrdersJET/src/index.html
@@ -93,6 +93,7 @@
         <script>
             window.onload = function(){
             document.getElementById("globalBody").focus();
+            console.log("global body focus");
             }
         </script>   
 
